<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_y_330"
        android:background="@drawable/car_background" >

        <LinearLayout
            android:id="@+id/car_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_y_50"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/layout_y_30"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/car_yiqing_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/car_yiqing_yi_xihuo"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_x_22" />

            <View
                android:layout_width="@dimen/layout_x_1"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/layout_x_10"
                android:layout_marginTop="@dimen/layout_x_10"
                android:background="@color/gray_c" />

            <TextView
                android:id="@+id/car_door_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/car_door_yi_close"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_x_22" />

            <View
                android:layout_width="@dimen/layout_x_1"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/layout_x_10"
                android:layout_marginTop="@dimen/layout_x_10"
                android:background="@color/gray_c" />

            <TextView
                android:id="@+id/car_kongtiao_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/car_kongtiao_yi_open"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_x_22" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/layout_x_400"
            android:layout_height="@dimen/layout_x_195"
            android:layout_above="@+id/car_radioGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/layout_x_17"
            android:src="@drawable/car_car" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/layout_y_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/car_btn_yinqing1"
                android:layout_width="@dimen/layout_x_100"
                android:layout_height="@dimen/layout_x_100"
                android:layout_centerHorizontal="true"
                android:background="@drawable/car_dianhuo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/car_btn_yinqing1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/layout_y_5"
                android:text="@string/car_dianhuo"
                android:textColor="@color/black_3"
                android:textSize="@dimen/layout_x_22" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/car_btn_door1"
                android:layout_width="@dimen/layout_x_100"
                android:layout_height="@dimen/layout_x_100"
                android:layout_centerHorizontal="true"
                android:background="@drawable/car_door_open" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/car_btn_door1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/layout_y_5"
                android:text="@string/car_door_open"
                android:textColor="@color/black_3"
                android:textSize="@dimen/layout_x_22" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/car_btn_kongtia01"
                android:layout_width="@dimen/layout_x_100"
                android:layout_height="@dimen/layout_x_100"
                android:layout_centerHorizontal="true"
                android:background="@drawable/car_kongtiao_open" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/car_btn_kongtia01"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/layout_y_5"
                android:text="@string/car_kongtiao_open"
                android:textColor="@color/black_3"
                android:textSize="@dimen/layout_x_22" />
        </RelativeLayout>
    </LinearLayout>
    
    
     <LinearLayout
        android:layout_marginTop="@dimen/layout_y_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/car_btn_yinqing2"
                android:layout_width="@dimen/layout_x_100"
                android:layout_height="@dimen/layout_x_100"
                android:layout_centerHorizontal="true"
                android:background="@drawable/car_xihuo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/car_btn_yinqing2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/layout_y_5"
                android:text="@string/car_xihuo"
                android:textColor="@color/black_3"
                android:textSize="@dimen/layout_x_22" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/car_btn_door2"
                android:layout_width="@dimen/layout_x_100"
                android:layout_height="@dimen/layout_x_100"
                android:layout_centerHorizontal="true"
                android:background="@drawable/car_door_open" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/car_btn_door2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/layout_y_5"
                android:text="@string/car_door_close"
                android:textColor="@color/black_3"
                android:textSize="@dimen/layout_x_22" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/car_btn_kongtia02"
                android:layout_width="@dimen/layout_x_100"
                android:layout_height="@dimen/layout_x_100"
                android:layout_centerHorizontal="true"
                android:background="@drawable/car_kongtiao_close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/car_btn_kongtia02"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/layout_y_5"
                android:text="@string/car_kongtiao_close"
                android:textColor="@color/black_3"
                android:textSize="@dimen/layout_x_22" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>